# ptrace-syscalls

./: ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  pyproject.toml  rustfmt.toml
examples/: mmaptrace.rs  rstrace.rs
ptrace-syscalls-macros/: Cargo.toml
ptrace-syscalls-macros/src/: lib.rs
scripts/: generate_syscall_number_test.py
src/: group.rs  inspect.rs  lib.rs  syscalls.rs  types.rs
src/arch/: aarch64.rs  riscv64.rs  x86_64.rs
src/types/: dst.rs
tests/: syscall_number_tests.rs
tracer-syscalls/: Cargo.toml
tracer-syscalls-macros/: Cargo.toml
tracer-syscalls-macros/src/: lib.rs
tracer-syscalls/examples/: rstrace.rs
tracer-syscalls/scripts/: requirements.txt
tracer-syscalls/src/: group.rs  inspect.rs  lib.rs  syscalls.rs  types.rs
tracer-syscalls/src/types/: dst.rs
