[workspace] 
members = ["ptrace-syscalls-macros"] 


[workspace.package]
version = "0.0.0-experimental.3"
authors = ["Levi Zim <rsworktech@outlook.com>"]

[package]
name = "ptrace-syscalls"
description = "Analyze syscalls via ptrace"
keywords = ["ptrace", "syscall", "strace"]
categories = ["os::linux-apis", "parser-implementations"]
version.workspace = true
license = "MIT"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
enumflags2 = "0.7.9"
itertools = "0.13.0"
nix = { version = "0.29.0", features = ["process", "ptrace", "feature"] }
once_cell = "1.19.0"
paste = "1.0.15"
slice-dst = "1.5.1"
ptrace-syscalls-macros = { version = "0.0.0-experimental.3", path = "./ptrace-syscalls-macros" }

[dev-dependencies]
owo-colors = { version = "4.0.0", package="kxxt-owo-colors" }
nix = { version = "0.29.0", features = ["process", "ptrace", "signal"] }
