[package]
name = "ptrace-syscalls-macros"
description = "Internal proc macros for ptrace-syscalls"
edition = "2021"
license = "MIT"
version.workspace = true
authors.workspace = true


[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
itertools = "0.13.0"
paste = "1.0.15"
proc-macro-crate = "3.1.0"
proc-macro2 = "1.0.84"
quote = "1.0.36"
syn = { version = "2.0.66", features = ["full"] }
