[package]
name = "tracer-syscalls"
description = "Linux syscalls primarily for usage in ptrace"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
nix = { version = "0.29.0", features = ["process"] }
paste = "1.0.15"
tracer-syscalls-macros = { version = "0.1.0", path = "../tracer-syscalls-macros" }
