[package]
name = "tracer-syscalls"
description = "Linux syscalls primarily for usage in ptrace"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
enumflags2 = "0.7.9"
itertools = "0.13.0"
nix = { version = "0.29.0", features = ["process", "ptrace", "feature"] }
once_cell = "1.19.0"
paste = "1.0.15"
slice-dst = "1.5.1"
tracer-syscalls-macros = { version = "0.1.0", path = "../tracer-syscalls-macros" }

[dev-dependencies]
nix = { version = "0.29.0", features = ["process", "ptrace", "signal"] }
